[package]
name = "what"
version = "0.1.0"
edition = "2021"
author = "Thomas Wachter"

[[bin]]
name = "what"
path = "src/main.rs"

[lib]
name = "what"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
image = "0.24.7"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simplelog = "0.12.1"
