[package]
name = "what"
version = "0.1.0"
edition = "2021"
author = "Thomas Wachter"

[[bin]]
name = "what"
path = "src/main.rs"

[lib]
name = "what"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.3", features = ["derive"] }
gltf = { version = "1.3.0", features = ["base64", "image", "names", "urlencoding", "utils"] }
image_crate = { package = "image", version = "0.24.7" }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
simplelog = "0.12.1"
ureq = "2.9.0"
urlencoding = "2.1.3"
